# goalcast-2026

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  retrain.yml
dashboard/: _shared.py  app.py
dashboard/pages/: 1_Match_Predictor.py  2_Scoreline.py  3_Group_Simulator.py  4_Tournament_Winner.py  5_Model_Performance.py  6_Monitoring.py  7_AI_Analyst.py
docs/: architecture.md
docs/knowledge_base/: features.md  methodology.md  model_card.md
scripts/: make_demo_plots.py
src/goalcast/: __init__.py  config.py  logging_conf.py
src/goalcast/api/: deps.py  main.py  predictor.py  schemas.py
src/goalcast/data/: db.py  ingest.py  quality.py  schema.py
src/goalcast/features/: build.py  elo.py  form.py
src/goalcast/llm/: analyst.py  rag.py
src/goalcast/models/: baseline.py  bundle.py  classifier.py  dataset.py  evaluate.py  poisson.py  registry.py  train.py
src/goalcast/monitoring/: drift.py
src/goalcast/simulation/: monte_carlo.py
tests/: conftest.py  test_api.py  test_features.py  test_models.py  test_simulation.py
